Finish the practice of chapter 9

--- a/ch09www/templates/index.html
+++ b/ch09www/templates/index.html
@@ -12,13 +12,29 @@
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading" align=center>
-                    <h3>我的私人日記</h3>
+                    <h3>{{ username | default:"我" }}的私人日記</h3>
                 </div>
             </div>
         </div>
     </div>
-    {% if username %}
-    歡迎：{{ username }}
-    {% endif %}
+    {% for diary in diaries %}
+    {% cycle "<div class='row'>" "" "" %}
+        <div class="col-md-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading" align=center>
+                    {{ diary.ddate }}
+                </div>
+                <div class="panel-body">
+                    {{ diary.note | linebreaks }}
+                </div>
+                <div class="panel-footer">
+                    今日花費：{{ diary.budget }}元，體重：{{ diary.weight }} 公斤
+                </div>
+            </div>
+        </div>
+    {% cycle "" "" "</div>" %}
+    {% empty %}
+        <h3><em>登入網站才能夠使用日記功能</em></h3>
+    {% endfor %}
 </div>
 {% endblock %}
