--- a/ch09www/templates/posting.html
+++ b/ch09www/templates/posting.html
@@ -3,22 +3,14 @@
 {% block title %}我有話要說{% endblock %}
 {% block content %}
 <div class="container">
-{% if message %}
-    <div class="alert alert-warning">{{message}}</div>
-{% endif %}
+{% for message in messages %}
+    <div class="alert alert-{{message.tags}}">{{message}}</div>
+{% endfor %}
 <form action="." name="my_form" method="POST">
     {% csrf_token %}
-    現在心情：<br>
-    {% for m in moods %}
-    <input type="radio" name="user_mood" value="{{m.status}}">{{m.status}}
-    {% endfor %}
-    <br>
-    心情留言板：<br>
-    <textarea name="user_post" cols="70" rows="3"></textarea><br>
-    <label for="user_id">你的暱稱：</label>
-    <input type="text" name="user_id" id="user_id">
-    <label for="user_pass">張貼／刪除密碼：</label>
-    <input type="password" name="user_pass" id="user_pass">
+    <table>
+        {{ post_form.as_table }}
+    </table>
     <input type="submit" value="張貼">
     <input type="reset" value="清除重填">
 </form>
