Fix chapter 10 typo

--- a/ch10www/templates/footer.html
+++ b/ch10www/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- footer.html -->
 <hr>
 {% load static %}
-<img src="{% static 'imgages/logo.png' %}" width=100>
+<img src="{% static 'images/logo.png' %}" width=100>
 <em>Copyright 2019. All rights reserved.</em>
